# serializer version: 1
# name: test_agg_ok[pipe_agg_group_and_order_by][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP AND ORDER BY col3'
# ---
# name: test_agg_ok[pipe_agg_group_and_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            ident	col3
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_cube][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY CUBE (col3, (col4, col5))'
# ---
# name: test_agg_ok[pipe_agg_group_by_cube][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            cube_list
              cube_item
                ident	col3
              cube_item
                struct_literal
                  ident	col4
                  ident	col5
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_empty][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY ()'
# ---
# name: test_agg_ok[pipe_agg_group_by_empty][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            grouping_item_empty
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY GROUPING SETS (col3, (col4, col5), col6)'
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                ident	col3
              grouping_set
                struct_literal
                  ident	col4
                  ident	col5
              grouping_set
                ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets_rollup_cube][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY GROUPING SETS (col3, ROLLUP(col4, col5), CUBE(col6, col7))'
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets_rollup_cube][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                ident	col3
              grouping_set
                rollup_list
                  rollup_item
                    ident	col4
                  rollup_item
                    ident	col5
              grouping_set
                cube_list
                  cube_item
                    ident	col6
                  cube_item
                    ident	col7
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_multi_alias][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY col3 AS col4, col5 AS col6'
# ---
# name: test_agg_ok[pipe_agg_group_by_multi_alias][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
            as_alias
              ident	col4
          grouping_item
            ident	col5
            as_alias
              ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_order_by][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY col3 AS col4 DESC, col5 AS col6 ASC NULLS LAST'
# ---
# name: test_agg_ok[pipe_agg_group_by_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
            as_alias
              ident	col4
            order_by_item_sort	DESC
          grouping_item
            ident	col5
            as_alias
              ident	col6
            order_by_item_sort	ASC
            order_by_item_nulls	LAST
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_rollup][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY ROLLUP (col3, col4)'
# ---
# name: test_agg_ok[pipe_agg_group_by_rollup][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            rollup_list
              rollup_item
                ident	col3
              rollup_item
                ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY col3'
# ---
# name: test_agg_ok[pipe_agg_group_by_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single_alias][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 GROUP BY col3 AS col4'
# ---
# name: test_agg_ok[pipe_agg_group_by_single_alias][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
            as_alias
              ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_multi_alias][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2, SUM(col3) AS col4'
# ---
# name: test_agg_ok[pipe_agg_multi_alias][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col3
              as_alias
                ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_order_by][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2 DESC, SUM(col3) AS col4 ASC NULLS LAST'
# ---
# name: test_agg_ok[pipe_agg_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
          order_by_item_sort	DESC
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col3
              as_alias
                ident	col4
          order_by_item_sort	ASC
          order_by_item_nulls	LAST
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single][sql]
  'FROM table1 |> AGGREGATE SUM(col1)'
# ---
# name: test_agg_ok[pipe_agg_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single_alias][sql]
  'FROM table1 |> AGGREGATE SUM(col1) AS col2'
# ---
# name: test_agg_ok[pipe_agg_single_alias][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
  
  '''
# ---
# name: test_as_ok[pipe_as_single][sql]
  'FROM table1 |> AS table2'
# ---
# name: test_as_ok[pipe_as_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_as
      ident	table2
  
  '''
# ---
# name: test_call_ok[call][sql]
  "FROM table1 |> CALL APPENDS('1970-01-01')"
# ---
# name: test_call_ok[call][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_call
      function_call_expr
        function_name
          ident	APPENDS
        function_args
          pos_arg
            string_literal	'1970-01-01'
  
  '''
# ---
# name: test_call_ok[call_alias_explicit][sql]
  "FROM table1 |> CALL APPENDS('1970-01-01') AS table2"
# ---
# name: test_call_ok[call_alias_explicit][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_call
      function_call_expr
        function_name
          ident	APPENDS
        function_args
          pos_arg
            string_literal	'1970-01-01'
      as_alias
        ident	table2
  
  '''
# ---
# name: test_call_ok[call_alias_implicit][sql]
  "FROM table1 |> CALL APPENDS('1970-01-01') table2"
# ---
# name: test_call_ok[call_alias_implicit][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_call
      function_call_expr
        function_name
          ident	APPENDS
        function_args
          pos_arg
            string_literal	'1970-01-01'
      as_alias
        ident	table2
  
  '''
# ---
# name: test_join_ok[join_cross][sql]
  'FROM table1 |> CROSS JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_cross][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	CROSS
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_full][sql]
  'FROM table1 |> FULL JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_full][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	FULL
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_full_outer][sql]
  'FROM table1 |> FULL OUTER JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_full_outer][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria
        FULL
        OUTER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_inner][sql]
  'FROM table1 |> INNER JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_inner][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	INNER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_left][sql]
  'FROM table1 |> LEFT JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_left][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	LEFT
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_left_outer][sql]
  'FROM table1 |> LEFT OUTER JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_left_outer][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria
        LEFT
        OUTER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_on_compound_expr][sql]
  'FROM table1 |> JOIN table2 ON col1 = col2 AND col3 != col4'
# ---
# name: test_join_ok[join_on_compound_expr][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        on_clause
          and_expr
            eq_expr
              ident	col1
              ident	col2
            ne_expr
              ident	col3
              ident	col4
  
  '''
# ---
# name: test_join_ok[join_on_single_expr][sql]
  'FROM table1 |> JOIN table2 ON col1 = col2'
# ---
# name: test_join_ok[join_on_single_expr][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        on_clause
          eq_expr
            ident	col1
            ident	col2
  
  '''
# ---
# name: test_join_ok[join_right][sql]
  'FROM table1 |> RIGHT JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_right][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	RIGHT
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_right_outer][sql]
  'FROM table1 |> RIGHT OUTER JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_right_outer][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria
        RIGHT
        OUTER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_using_multi][sql]
  'FROM table1 |> JOIN table2 USING (col1, col2)'
# ---
# name: test_join_ok[join_using_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
          ident	col2
  
  '''
# ---
# name: test_join_ok[join_using_single][sql]
  'FROM table1 |> JOIN table2 USING (col1)'
# ---
# name: test_join_ok[join_using_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_limit_ok[pipe_limit_integer_literal][sql]
  'FROM table1 |> LIMIT 1'
# ---
# name: test_limit_ok[pipe_limit_integer_literal][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_limit
      limit_expr
        integer_literal	1
  
  '''
# ---
# name: test_limit_ok[pipe_limit_offset][sql]
  'FROM table1 |> LIMIT 1 OFFSET 2'
# ---
# name: test_limit_ok[pipe_limit_offset][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_limit
      limit_expr
        integer_literal	1
      offset_expr
        integer_literal	2
  
  '''
# ---
# name: test_limit_ok[pipe_limit_param][sql]
  'FROM table1 |> LIMIT @limit'
# ---
# name: test_limit_ok[pipe_limit_param][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_limit
      limit_expr
        parameter	limit
  
  '''
# ---
# name: test_order_by_ok[order_by_multi][sql]
  'FROM table1 |> ORDER BY col1, col2'
# ---
# name: test_order_by_ok[order_by_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
        order_by_item
          ident	col2
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_kitchen_sink][sql]
  'FROM table1 |> ORDER BY col1 ASC NULLS FIRST, col2 DESC NULLS LAST'
# ---
# name: test_order_by_ok[order_by_multi_kitchen_sink][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
          order_by_item_sort	ASC
          order_by_item_nulls	FIRST
        order_by_item
          ident	col2
          order_by_item_sort	DESC
          order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_nulls][sql]
  'FROM table1 |> ORDER BY col1 NULLS FIRST, col2 NULLS LAST'
# ---
# name: test_order_by_ok[order_by_multi_nulls][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
          order_by_item_nulls	FIRST
        order_by_item
          ident	col2
          order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_sort][sql]
  'FROM table1 |> ORDER BY col1 ASC, col2 DESC'
# ---
# name: test_order_by_ok[order_by_multi_sort][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
          order_by_item_sort	ASC
        order_by_item
          ident	col2
          order_by_item_sort	DESC
  
  '''
# ---
# name: test_order_by_ok[order_by_single][sql]
  'FROM table1 |> ORDER BY col1'
# ---
# name: test_order_by_ok[order_by_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_multi][sql]
  'FROM table1 |> DROP col1, col2'
# ---
# name: test_pipe_drop_ok[pipe_drop_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_drop
      drop_list
        drop_item
          ident	col1
        drop_item
          ident	col2
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single][sql]
  'FROM table1 |> DROP col1'
# ---
# name: test_pipe_drop_ok[pipe_drop_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_drop
      drop_list
        drop_item
          ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single_trailing_comma][sql]
  'FROM table1 |> DROP col1,'
# ---
# name: test_pipe_drop_ok[pipe_drop_single_trailing_comma][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_drop
      drop_list
        drop_item
          ident	col1
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_multi][sql]
  'FROM table1 |> EXTEND POW(col1, 2) AS col2, EXP(col1, 2)'
# ---
# name: test_pipe_extend_ok[pipe_extend_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
            as_alias
              ident	col2
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	EXP
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_named_window_multi][sql]
  'FROM table1 |> EXTEND SUM(col1) OVER (w1), SUM(col2) OVER (w2) WINDOW w1 AS (PARTITION BY col3), w2 AS (PARTITION BY col4)'
# ---
# name: test_pipe_extend_ok[pipe_extend_named_window_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col1
              window_expr
                window_spec
                  ident	w1
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col2
              window_expr
                window_spec
                  ident	w2
      window_clause
        window_item
          ident	w1
          window_expr
            window_spec
              window_partition_by
                ident	col3
        window_item
          ident	w2
          window_expr
            window_spec
              window_partition_by
                ident	col4
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_named_window_single][sql]
  'FROM table1 |> EXTEND SUM(col1) OVER (w) WINDOW w AS (PARTITION BY col2)'
# ---
# name: test_pipe_extend_ok[pipe_extend_named_window_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col1
              window_expr
                window_spec
                  ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_partition_by
                ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single][sql]
  'FROM table1 |> EXTEND POW(col1, 2)'
# ---
# name: test_pipe_extend_ok[pipe_extend_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_alias][sql]
  'FROM table1 |> EXTEND POW(col1, 2) AS col2'
# ---
# name: test_pipe_extend_ok[pipe_extend_single_alias][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
            as_alias
              ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_trailing_comma][sql]
  'FROM table1 |> EXTEND POW(col1, 2),'
# ---
# name: test_pipe_extend_ok[pipe_extend_single_trailing_comma][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
  
  '''
# ---
# name: test_pipe_ok[pipe_from][sql]
  'FROM table1'
# ---
# name: test_pipe_ok[pipe_from][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_pipe_ok[pipe_from_select][sql]
  'FROM table1 |> SELECT col1'
# ---
# name: test_pipe_ok[pipe_from_select][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_pg_subquery_quirks][sql]
  'SELECT (((SELECT 2)) |> SELECT 2)'
# ---
# name: test_pipe_ok[pipe_pg_subquery_quirks][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          subquery
            query_expr
              subquery
                query_expr
                  subquery
                    query_expr
                      select
                        select_list
                          select_expr
                            integer_literal	2
              pipe_select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_ok[pipe_select_named_window_multi][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (w1), SUM(col2) OVER (w2) WINDOW w1 AS (PARTITION BY col3), w2 AS (PARTITION BY col4)'
# ---
# name: test_pipe_ok[pipe_select_named_window_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                ident	w1
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col2
            window_expr
              window_spec
                ident	w2
      window_clause
        window_item
          ident	w1
          window_expr
            window_spec
              window_partition_by
                ident	col3
        window_item
          ident	w2
          window_expr
            window_spec
              window_partition_by
                ident	col4
  
  '''
# ---
# name: test_pipe_ok[pipe_select_named_window_reserved_conflict][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (w) WINDOW w AS (PARTITION BY date)'
# ---
# name: test_pipe_ok[pipe_select_named_window_reserved_conflict][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_partition_by
                ident	date
  
  '''
# ---
# name: test_pipe_ok[pipe_select_named_window_single][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (w) WINDOW w AS (PARTITION BY col2)'
# ---
# name: test_pipe_ok[pipe_select_named_window_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_partition_by
                ident	col2
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select][sql]
  'SELECT col1 FROM table1 |> SELECT col1'
# ---
# name: test_pipe_ok[pipe_select_select][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select_as_struct][sql]
  'SELECT col1 FROM table1 |> SELECT AS STRUCT col1'
# ---
# name: test_pipe_ok[pipe_select_select_as_struct][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_shape	STRUCT
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select_as_value][sql]
  'SELECT col1 FROM table1 |> SELECT AS VALUE col1'
# ---
# name: test_pipe_ok[pipe_select_select_as_value][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_shape	VALUE
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_subquery_select][sql]
  '(SELECT col1 FROM table1) |> SELECT col1'
# ---
# name: test_pipe_ok[pipe_subquery_select][tree]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              ident	col1
          from_clause
            from_item_table
              path_expression
                ident	table1
    pipe_select
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_multi][sql]
  'FROM table1 |> RENAME col1 AS col2, col3 AS col4'
# ---
# name: test_pipe_rename_ok[pipe_rename_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_rename
      rename_list
        rename_item
          ident	col1
          as_alias
            ident	col2
        rename_item
          ident	col3
          as_alias
            ident	col4
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single][sql]
  'FROM table1 |> RENAME col1 AS col2'
# ---
# name: test_pipe_rename_ok[pipe_rename_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_rename
      rename_list
        rename_item
          ident	col1
          as_alias
            ident	col2
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single_trailing_comma][sql]
  'FROM table1 |> RENAME col1 AS col2,'
# ---
# name: test_pipe_rename_ok[pipe_rename_single_trailing_comma][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_rename
      rename_list
        rename_item
          ident	col1
          as_alias
            ident	col2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_multi][sql]
  'FROM table1 |> SET col1 = POW(col1, 2), col2 = EXP(col1, 2)'
# ---
# name: test_pipe_set_ok[pipe_set_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set
      set_list
        set_item
          ident	col1
          function_call_expr
            function_name
              ident	POW
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
        set_item
          ident	col2
          function_call_expr
            function_name
              ident	EXP
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single][sql]
  'FROM table1 |> SET col1 = POW(col1, 2)'
# ---
# name: test_pipe_set_ok[pipe_set_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set
      set_list
        set_item
          ident	col1
          function_call_expr
            function_name
              ident	POW
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single_trailing_comma][sql]
  'FROM table1 |> SET col1 = POW(col1, 2),'
# ---
# name: test_pipe_set_ok[pipe_set_single_trailing_comma][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set
      set_list
        set_item
          ident	col1
          function_call_expr
            function_name
              ident	POW
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
  
  '''
# ---
# name: test_pivot_ok[pivot][sql]
  "FROM table1 |> PIVOT (SUM(col1) FOR quarter in ('Q1', 'Q2'))"
# ---
# name: test_pivot_ok[pivot][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col1
        path_expression
          ident	quarter
        pivot_value_list
          pivot_value_item
            string_literal	'Q1'
          pivot_value_item
            string_literal	'Q2'
  
  '''
# ---
# name: test_pivot_ok[pivot_aliased][sql]
  "FROM table1 |> PIVOT (SUM(col1) FOR quarter in ('Q1', 'Q2')) AS col2"
# ---
# name: test_pivot_ok[pivot_aliased][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col1
        path_expression
          ident	quarter
        pivot_value_list
          pivot_value_item
            string_literal	'Q1'
          pivot_value_item
            string_literal	'Q2'
      as_alias
        ident	col2
  
  '''
# ---
# name: test_set_operation_ok[set_operation_all_single][sql]
  'FROM table1 |> UNION ALL (SELECT 1)'
# ---
# name: test_set_operation_ok[set_operation_all_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name][sql]
  'FROM table1 |> EXCEPT ALL BY NAME (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_by_name][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	EXCEPT
          set_operation_mode	ALL
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name_on_multi][sql]
  'FROM table1 |> EXCEPT ALL BY NAME ON (col1,col2) (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_by_name_on_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	EXCEPT
          set_operation_mode	ALL
          set_operation_modifier_by_name
            set_operation_columns
              ident	col1
              ident	col2
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name_on_single][sql]
  'FROM table1 |> EXCEPT ALL BY NAME ON (col1) (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_by_name_on_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	EXCEPT
          set_operation_mode	ALL
          set_operation_modifier_by_name
            set_operation_columns
              ident	col1
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_corresponding][sql]
  'FROM table1 |> UNION ALL CORRESPONDING (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_corresponding][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_corresponding
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_distinct_multi][sql]
  'FROM table1 |> INTERSECT DISTINCT (SELECT 1), (SELECT 2)'
# ---
# name: test_set_operation_ok[set_operation_distinct_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	INTERSECT
          set_operation_mode	DISTINCT
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding][sql]
  'FROM table1 |> UNION ALL STRICT CORRESPONDING (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_strict_corresponding
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding_by][sql]
  'FROM table1 |> EXCEPT ALL STRICT CORRESPONDING BY (col1) (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	EXCEPT
          set_operation_mode	ALL
          set_operation_modifier_strict_corresponding
            set_operation_columns
              ident	col1
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_full][sql]
  'FROM table1 |> FULL UNION ALL BY NAME (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_with_criteria_full][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria	FULL
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_inner][sql]
  'FROM table1 |> INNER UNION ALL BY NAME (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_with_criteria_inner][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria	INNER
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left][sql]
  'FROM table1 |> LEFT UNION ALL BY NAME (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria	LEFT
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left_outer][sql]
  'FROM table1 |> LEFT OUTER UNION ALL BY NAME (SELECT 1 as col1)'
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left_outer][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria
            LEFT
            OUTER
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_tablesample_ok[tablesample][sql]
  'FROM table1 |> TABLESAMPLE SYSTEM (10 percent)'
# ---
# name: test_tablesample_ok[tablesample][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_tablesample
      tablesample_perc
        integer_literal	10
  
  '''
# ---
# name: test_unpivot_ok[unpivot][sql]
  'FROM table1 |> UNPIVOT (col1 FOR quarter IN (q1, q2))'
# ---
# name: test_unpivot_ok[unpivot][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_unpivot
      unpivot_clause
        path_expression
          ident	col1
        path_expression
          ident	quarter
        unpivot_value_list
          unpivot_value_item
            path_expression
              ident	q1
          unpivot_value_item
            path_expression
              ident	q2
  
  '''
# ---
# name: test_unpivot_ok[unpivot_aliased][sql]
  'FROM table1 |> UNPIVOT (col1 FOR quarter IN (q1, q2)) AS col2'
# ---
# name: test_unpivot_ok[unpivot_aliased][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_unpivot
      unpivot_clause
        path_expression
          ident	col1
        path_expression
          ident	quarter
        unpivot_value_list
          unpivot_value_item
            path_expression
              ident	q1
          unpivot_value_item
            path_expression
              ident	q2
      as_alias
        ident	col2
  
  '''
# ---
# name: test_where_ok[pipe_where_single][sql]
  'FROM table1 |> WHERE col1'
# ---
# name: test_where_ok[pipe_where_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_where
      ident	col1
  
  '''
# ---
# name: test_window_ok[window_frame_range][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (RANGE BETWEEN 1 PRECEDING AND 1 FOLLOWING)'
# ---
# name: test_window_ok[window_frame_range][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_frame
                  window_frame_kind	RANGE
                  window_frame_between
                    window_frame_between_numeric_preceding
                      window_frame_numeric_preceding
                        integer_literal	1
                      window_frame_numeric_following
                        integer_literal	1
  
  '''
# ---
# name: test_window_ok[window_frame_rows][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING)'
# ---
# name: test_window_ok[window_frame_rows][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_frame
                  window_frame_kind	ROWS
                  window_frame_between
                    window_frame_between_unbounded_preceding
                      window_frame_unbounded_preceding
                      window_frame_unbounded_following
  
  '''
# ---
# name: test_window_ok[window_order_by_multi][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (ORDER BY col2, col3)'
# ---
# name: test_window_ok[window_order_by_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_order_by
                  order_by_items
                    order_by_item
                      ident	col2
                    order_by_item
                      ident	col3
  
  '''
# ---
# name: test_window_ok[window_order_by_single][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (ORDER BY col2)'
# ---
# name: test_window_ok[window_order_by_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_order_by
                  order_by_items
                    order_by_item
                      ident	col2
  
  '''
# ---
# name: test_window_ok[window_parition_and_order_by][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (PARTITION BY col2 ORDER BY col3)'
# ---
# name: test_window_ok[window_parition_and_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_partition_by
                  ident	col2
                window_order_by
                  order_by_items
                    order_by_item
                      ident	col3
  
  '''
# ---
# name: test_window_ok[window_partition_by_multi][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (PARTITION BY col2, col3)'
# ---
# name: test_window_ok[window_partition_by_multi][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_partition_by
                  ident	col2
                  ident	col3
  
  '''
# ---
# name: test_window_ok[window_partition_by_single][sql]
  'FROM table1 |> SELECT SUM(col1) OVER (PARTITION BY col2)'
# ---
# name: test_window_ok[window_partition_by_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_partition_by
                  ident	col2
  
  '''
# ---
# name: test_window_ok[window_simple][sql]
  'FROM table1 |> SELECT SUM(col1) OVER ()'
# ---
# name: test_window_ok[window_simple][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
  
  '''
# ---
